fixed time not showing am/pm and footer position

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,9 +5,10 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
-  
     font-size: 62.5%;
+    
 }
+
 
 
 * { font-family: Courier !important;}
@@ -18,6 +19,7 @@
     margin: 0;
     padding: 0;
     color: white;
+   
 }
 
 
@@ -86,6 +88,10 @@ a {
     max-width: 80rem;
     margin: 0 auto;
     padding: 2rem;
+    
+
+   
+    
 }
 
 .container  > * {
@@ -124,7 +130,6 @@ a {
     width: 20rem;
     text-align: center;
     border: 0.1rem solid rgba(86, 185, 234, 0.5);
-    margin-bottom: 1rem;
     text-decoration: none;
     color: black;
     background-color: rgba(86, 185, 234, 0.5);
@@ -150,6 +155,7 @@ a {
 
 #autoWeather {
   margin-bottom: 3rem;
+  
 }
 
 .search-div {
@@ -160,6 +166,7 @@ a {
   height: 5rem;
   border-radius: 10rem;
   padding: 10px;
+  
 }
 
 #inputError {
@@ -246,6 +253,7 @@ input::placeholder {
   }
    .Cockpit button#autoWeather:focus {
      outline: 0;
+     
    }
   
   .Cockpit button#autoWeather:hover {
@@ -260,6 +268,7 @@ input::placeholder {
 
   #messageOne{
       margin-top: 4rem;
+      
   }
   #messageTwo {
       margin-bottom: 4rem;
@@ -267,6 +276,7 @@ input::placeholder {
       line-height: 2.5rem;
       text-align: center;
       color: white;
+     
   }
   #errorMsg {
     margin-top: 3rem;
@@ -361,7 +371,7 @@ input::placeholder {
   }
 
   #clock {
-    font-size: 3rem;
+    font-size: 4rem;
     color: rgb(34, 31, 31);
     font-family: 'Courier New';
   }
